# nstm

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_colab.txt
docs/: conf.py  index.rst  installation.rst  load_your_sim_data.rst  nstm_on_new_system.rst  requirements.txt  try_dpc.rst  try_sim.rst
docs/source/: modules.rst  nstm.commands.rst  nstm.rst
examples/: notebook-DPC.ipynb  notebook-SIM.ipynb
examples/configs/: diffcam_tennis.yaml  er_cell.yaml  mito_cell.yaml
nstm/: datasets.py  diffcam_flow.py  diffcam_main.py  diffcam_utils.py  dpc_flow.py  dpc_utils.py  hash_encoding.py  pos_encoding.py  sim3d_flow.py  sim3d_main.py  sim3d_utils.py  spacetime.py  utils.py  viz_utils.py
nstm/commands/: czi_conversion.py  full_to_patches.py  process_raw_images.py  timestamp_generation.py
